--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <style>
 body{
+    <audio id="bgMusic" loop>
+  <source src="love.mp3" type="audio/mpeg">
+</audio>
+     
     margin:0;
     font-family:'Segoe UI',sans-serif;
     background:linear-gradient(120deg,#ff9a9e,#fecfef);
@@ -117,7 +121,7 @@ button{
      <h2>Even 196 kilometers can't stop us ❤️</h2>
     <p>Different cities, same sky 🌙</p>
     <p>You’re worth every kilometer between us.</p>
-    <button class="next" onclick="next(4)">There’s something I want to ask… 💌</button><br>
+<button class="next" onclick="playMusic(); next(2)">Tap to Continue 💌</button>
     <img src="catkiss.gif" style="width:200px;margin-top:25px;">
 </div>
 
@@ -151,6 +155,22 @@ button{
 </div>
 
 <script>
+    function playMusic(){
+  const music = document.getElementById("bgMusic");
+  music.volume = 0;   // start silent
+  music.play();
+
+  let vol = 0;
+  const fade = setInterval(() => {
+    if (vol < 0.4) {   // max volume (soft)
+      vol += 0.02;
+      music.volume = vol;
+    } else {
+      clearInterval(fade);
+    }
+  }, 200); // speed of fade
+    }
+    
 let noCount=0;
 const noTexts=["Please 🥺","I really want you 💖","Don’t break my heart 😭","Pretty please 🌸","You’re too cute to say no 🥹"];
 
